User can register a car

--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -15,4 +15,14 @@
         android:text="LOG OUT"
         tools:layout_editor_absoluteY="262dp" />
 
+    <Button
+        android:id="@+id/btnToRegister"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/btnLogout"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="48dp"
+        android:layout_marginBottom="263dp"
+        android:text="Register" />
+
 </RelativeLayout>
