--- a/app/src/main/res/layout/activity_register_car.xml
+++ b/app/src/main/res/layout/activity_register_car.xml
@@ -12,7 +12,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="88dp"
+        android:layout_marginTop="42dp"
         android:ems="10"
         android:hint="Car Model"
         android:inputType="textPersonName"
@@ -77,4 +77,15 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="19dp"
         android:text="CAMERA" />
+
+    <TextView
+        android:id="@+id/tvClose"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginStart="5dp"
+        android:layout_marginTop="5dp"
+        android:text="CLOSE"
+        android:textStyle="bold" />
 </RelativeLayout>
