--- a/app/src/main/res/layout/activity_user_car_details.xml
+++ b/app/src/main/res/layout/activity_user_car_details.xml
@@ -45,6 +45,20 @@
         android:layout_marginStart="30dp"
         android:layout_marginTop="23dp"
         android:layout_marginEnd="30dp"
+        android:layout_marginBottom="20dp"
         android:scaleType="centerCrop"
         tools:srcCompat="@tools:sample/avatars" />
+
+    <ImageButton
+        android:id="@+id/ibtnEdit"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginStart="175dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="19dp"
+        android:layout_toEndOf="@+id/tvCarDetailName"
+        android:tint="#5314FF"
+        app:srcCompat="@android:drawable/ic_menu_edit" />
 </RelativeLayout>
