--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -31,7 +31,7 @@
         android:layout_below="@+id/btnToRegister"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="66dp"
-        android:text="VIEW CARS" />
+        android:text="VIEW MY CARS" />
 
     <TextView
         android:id="@+id/tvProfileUser"
