--- a/app/src/main/res/layout/activity_event_details.xml
+++ b/app/src/main/res/layout/activity_event_details.xml
@@ -1,11 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    tools:context=".activities.EventDetailsActivity">
 
     <TextView
-        android:id="@+id/tvStart"
+        android:id="@+id/tvEventDetailStart"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
@@ -15,42 +17,52 @@
         tools:text="1/14/2021 1:00pm" />
 
     <TextView
-        android:id="@+id/tvEnd"
+        android:id="@+id/tvEventDetailEnd"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_marginStart="0dp"
         android:layout_marginTop="20dp"
-        android:layout_toEndOf="@+id/tvStart"
+        android:layout_toEndOf="@+id/tvEventDetailStart"
         tools:text=" to 1/16/2021 2:00pm" />
 
     <TextView
-        android:id="@+id/tvEventCarName"
+        android:id="@+id/tvEventDetailCarName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/tvStart"
+        android:layout_below="@+id/tvEventDetailStart"
         android:layout_alignParentStart="true"
         android:layout_marginStart="31dp"
         android:layout_marginTop="20dp"
         tools:text="Tesla Model S" />
 
     <TextView
-        android:id="@+id/tvRenter"
+        android:id="@+id/tvEventDetailRenter"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/tvEventCarName"
+        android:layout_below="@+id/tvEventDetailCarName"
         android:layout_alignParentStart="true"
         android:layout_marginStart="32dp"
         android:layout_marginTop="20dp"
         tools:text="Renter: renees" />
 
     <TextView
-        android:id="@+id/tvCarOwner"
+        android:id="@+id/tvEventDetailCarOwner"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/tvRenter"
+        android:layout_below="@+id/tvEventDetailRenter"
         android:layout_alignParentStart="true"
         android:layout_marginStart="32dp"
         android:layout_marginTop="20dp"
         tools:text="Owner: mackey" />
+
+    <ImageButton
+        android:id="@+id/ibtnEditEvent"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginStart="68dp"
+        android:layout_toEndOf="@+id/tvEventDetailEnd"
+        app:srcCompat="@android:drawable/ic_menu_edit" />
 </RelativeLayout>
