When scrolling down, bottomNavigationView is hidden (such that user can view all entries that would have otherwise been hidden by the bottom bar

--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -22,7 +22,7 @@
         android:layout_below="@+id/btnLogout"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="48dp"
-        android:text="Register" />
+        android:text="Add Car" />
 
     <Button
         android:id="@+id/btnViewCars"
