--- a/app/src/main/res/layout/activity_event_details.xml
+++ b/app/src/main/res/layout/activity_event_details.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    tools:context=".activities.EventDetailsActivity">
+    tools:context="com.example.wheeldeal.activities.EventDetailsActivity">
 
     <TextView
         android:id="@+id/tvEventDetailStart"
