--- a/app/src/main/res/layout/activity_user_car_details.xml
+++ b/app/src/main/res/layout/activity_user_car_details.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activities.CarDetailsActivity">
+    tools:context="com.example.wheeldeal.activities.CarDetailsActivity">
 
     <TextView
         android:id="@+id/tvCarDetailName"
