--- a/app/src/main/res/layout/activity_schedule_times.xml
+++ b/app/src/main/res/layout/activity_schedule_times.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.wheeldeal.activities.ScheduleTimesActivity">
+    tools:context="com.example.wheeldeal.oldactivities.ScheduleTimesActivity">
 
     <Button
         android:id="@+id/btnStartDate"
