--- a/app/src/main/res/layout/activity_register_car.xml
+++ b/app/src/main/res/layout/activity_register_car.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.wheeldeal.activities.RegisterCarActivity">
+    tools:context="com.example.wheeldeal.activities.AddOwnCarActivity">
 
     <EditText
         android:id="@+id/etName"
