--- a/app/src/main/res/layout/activity_user_car_feed.xml
+++ b/app/src/main/res/layout/activity_user_car_feed.xml
@@ -15,9 +15,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="bottom|right"
-            android:layout_margin="16dp"
             android:layout_marginLeft="0dp"
             android:layout_marginTop="0dp"
+            android:layout_marginEnd="15dp"
+            android:layout_marginBottom="60dp"
             android:src="@drawable/outline_add_black_24dp"
             app:layout_anchor="@id/swipeUserContainer"
             app:layout_anchorGravity="bottom|right|end" />
