--- a/app/src/main/res/layout/fragment_account_details.xml
+++ b/app/src/main/res/layout/fragment_account_details.xml
@@ -17,16 +17,9 @@
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="200dp"
+            android:layout_height="150dp"
             android:background="#A7E37D"
             android:padding="20dp">
-
-            <ImageView
-                android:id="@+id/profile_image"
-                android:layout_width="100dp"
-                android:layout_height="100dp"
-                android:layout_centerVertical="true"
-                tools:srcCompat="@tools:sample/avatars" />
 
             <TextView
                 android:id="@+id/full_name"
@@ -34,20 +27,11 @@
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
                 android:layout_marginLeft="10dp"
-                android:layout_toRightOf="@id/profile_image"
                 android:includeFontPadding="false"
-                android:textSize="20sp"
+                android:textSize="30sp"
+                android:textStyle="bold"
                 tools:text="Renee Su" />
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/full_name"
-                android:layout_marginLeft="10dp"
-                android:layout_toRightOf="@id/profile_image"
-                android:includeFontPadding="false"
-                android:textSize="14sp"
-                tools:text="renees" />
         </RelativeLayout>
 
         <LinearLayout
@@ -184,28 +168,34 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="10dp"
-                android:hint="Full Name">
+                android:hint="Username"
+                app:startIconDrawable="@drawable/ic_baseline_person_24">
 
+<!--                <androidx.appcompat.widget.AppCompatEditText-->
+<!--                    android:layout_width="match_parent"-->
+<!--                    android:layout_height="wrap_content"-->
+<!--                    android:drawablePadding="10dp"-->
+<!--                    tools:text="Renee Su"></androidx.appcompat.widget.AppCompatEditText>-->
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/etProfileName"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:drawableLeft="@drawable/ic_baseline_person_24"
+                    android:drawablePadding="0dp"
                     tools:text="Renee Su">
-
                 </com.google.android.material.textfield.TextInputEditText>
             </com.google.android.material.textfield.TextInputLayout>
             <com.google.android.material.textfield.TextInputLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="Email"
-                android:layout_marginBottom="10dp">
+                android:layout_marginBottom="10dp"
+                app:startIconDrawable="@android:drawable/sym_action_email">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/etProfileEmail"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:drawableLeft="@drawable/ic_baseline_person_24"
+                    android:drawablePadding="0dp"
                     tools:text="reneekxsu@gmail.com"></com.google.android.material.textfield.TextInputEditText>
             </com.google.android.material.textfield.TextInputLayout>
 
@@ -213,13 +203,14 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="10dp"
-                android:hint="Address">
+                android:hint="Address"
+                app:startIconDrawable="@drawable/ic_baseline_home_24">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/etProfileAddress"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:drawableLeft="@drawable/ic_baseline_person_24"
+                    android:drawablePadding="0dp"
                     tools:text="4030 Manzana Lane, Palo Alto, CA, 94306">
 
                 </com.google.android.material.textfield.TextInputEditText>
