--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -6,12 +6,37 @@
     android:layout_height="match_parent"
     tools:context="com.example.wheeldeal.activities.SignUpActivity">
 
+    <RelativeLayout
+        android:id="@+id/rlSignUpContainer"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="50dp">
+
+        <TextView
+            android:id="@+id/tvCreateAccount"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="20dp"
+            android:layout_marginTop="20dp"
+            android:text="Create Account."
+            android:textSize="25sp"
+            android:textStyle="bold"></TextView>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/tvCreateAccount"
+            android:layout_marginStart="20dp"
+            android:text="Sign up to get started."
+            android:textSize="18sp"></TextView>
+    </RelativeLayout>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_below="@+id/rlSignUpContainer"
         android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginTop="174dp"
+        android:layout_marginTop="0dp"
         android:orientation="vertical"
         android:padding="20dp">
 
