--- a/app/src/main/res/layout/item_event.xml
+++ b/app/src/main/res/layout/item_event.xml
@@ -69,8 +69,17 @@
                 android:layout_alignParentStart="true"
                 android:layout_marginStart="20dp"
                 android:layout_marginTop="10dp"
-                android:layout_marginBottom="10dp"
                 tools:text="Owner: mackey" />
+
+            <TextView
+                android:id="@+id/tvPickUpAddress"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/tvCarOwner"
+                android:layout_marginStart="20dp"
+                android:layout_marginTop="5dp"
+                android:layout_marginBottom="10dp"
+                tools:text="Pick Up Address: 4030 Manzana Lane" />
         </RelativeLayout>
     </com.google.android.material.card.MaterialCardView>
 
