Sign up shows red box around username EditText if username is already taken, displaying error message to user as well

--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -46,7 +46,8 @@
             android:layout_marginBottom="10dp"
             android:hint="Username"
             app:startIconDrawable="@drawable/ic_baseline_person_24"
-            app:errorEnabled="true">
+            app:errorEnabled="true"
+            android:id="@+id/tilSignUpUsername">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/etSignUpUsername"
@@ -61,8 +62,7 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="10dp"
             android:hint="Password"
-            app:startIconDrawable="@android:drawable/ic_lock_idle_lock"
-            app:errorEnabled="true">
+            app:startIconDrawable="@android:drawable/ic_lock_idle_lock">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/etSignUpPassword"
