--- a/app/src/main/res/layout/activity_google_maps.xml
+++ b/app/src/main/res/layout/activity_google_maps.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activities.GoogleMapsActivity">
+    tools:context=".oldclasses.GoogleMapsActivity">
 
     <fragment
         android:layout_width="match_parent"
