--- a/app/src/main/res/layout/activity_schedule_dates.xml
+++ b/app/src/main/res/layout/activity_schedule_dates.xml
@@ -17,7 +17,6 @@
         android:layout_centerHorizontal="true"
         android:layout_gravity="center"
         android:layout_marginTop="44dp"
-        android:text="Selected Date is : "
         android:textSize="18sp" />
 
     <Button
@@ -26,7 +25,7 @@
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_gravity="center"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="100dp"
         android:text="Select Date"
         android:textSize="18sp"
         app:icon="@android:drawable/ic_menu_my_calendar" />
@@ -38,6 +37,6 @@
         android:layout_below="@+id/show_selected_date"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="106dp"
-        android:text="Done" />
+        android:text="Confirm Selection" />
 
 </RelativeLayout>
