--- a/app/src/main/res/layout/fragment_schedule_viewpager.xml
+++ b/app/src/main/res/layout/fragment_schedule_viewpager.xml
@@ -6,6 +6,11 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".fragments.ScheduleViewpagerFragment">
 
+    <include
+        layout="@layout/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -15,7 +20,8 @@
             android:id="@+id/sliding_tabs"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:tabMode="fixed" />
+            app:tabMode="fixed"
+            android:layout_marginTop="?attr/actionBarSize"/>
 
         <androidx.viewpager.widget.ViewPager
             android:id="@+id/viewpager"
